--- a/packages/helix/config.toml
+++ b/packages/helix/config.toml
@@ -2,3 +2,7 @@ theme = "catppuccin_mocha"
 
 [editor]
 idle-timeout=100
+
+[keys.normal.space.f]
+f = "file_picker"
+t = ":sh zellij run -c -f -x 10% -y 10% --width 80% --height 80% -- nu $ZELLIX_PATH/yazi.nu"
