Changed from ppd to tlp, and adjusted to add scripts to bin

--- a/packages/wayland/hyprland/hyprland.conf
+++ b/packages/wayland/hyprland/hyprland.conf
@@ -52,10 +52,11 @@ bind = , X, exec, $reset
 bind = , X, killactive
 bind = , F, exec, $reset
 bind = , F, fullscreen
+bind = , V, exec, $reset
+bind = , V, togglefloating
 
 # Open Stuff
 bind = , E, exec, $reset && zen-beta
-bind = , S, exec, $reset && ghostty -e zellij
 bind = , return, exec, $reset && ghostty
 
 # Window Options
