--- a/packages/wayland/hyprland/hyprland.conf
+++ b/packages/wayland/hyprland/hyprland.conf
@@ -1,16 +1,16 @@
 $mod=SUPER
 
 # Navigate Windows
-bind = $mod, H, movefocus, l
-bind = $mod, J, movefocus, d
-bind = $mod, K, movefocus, u
-bind = $mod, L, movefocus, r
+bind = $mod, H, hy3:movefocus, l
+bind = $mod, J, hy3:movefocus, d
+bind = $mod, K, hy3:movefocus, u
+bind = $mod, L, hy3:movefocus, r
 
 # Moving Windows Around
-bind = $mod SHIFT, H, swapwindow, l
-bind = $mod SHIFT, J, swapwindow, d 
-bind = $mod SHIFT, K, swapwindow, u 
-bind = $mod SHIFT, L, swapwindow, r
+bind = $mod SHIFT, H, hy3:movewindow, l
+bind = $mod SHIFT, J, hy3:movewindow, d 
+bind = $mod SHIFT, K, hy3:movewindow, u 
+bind = $mod SHIFT, L, hy3:movewindow, r
 
 # Switching Workspaces
 bind = $mod, code:10, workspace, 6
@@ -54,6 +54,17 @@ bind = , F, exec, $reset
 bind = , F, fullscreen
 bind = , V, exec, $reset
 bind = , V, togglefloating
+
+bind = , G, exec, $reset
+bind = , G, hy3:changegroup, toggletab
+
+bind = , H, exec, $reset
+bind = , H, hy3:changegroup, h
+
+bind = , N, exec, $reset
+bind = , N, hy3:changegroup, v
+
+bind = , L, exec, $reset && hyprctl dispatch exec hyprlock && sleep 1 && hyprctl dispatch dpms off
 
 # Open Stuff
 bind = , E, exec, $reset && zen-beta
