--- a/packages/wayland/hyprland/hyprlock.conf
+++ b/packages/wayland/hyprland/hyprlock.conf
@@ -31,6 +31,7 @@ input-field {
     fade_on_empty = false
     rounding = -1
     check_color = rgb(204, 136, 34)
+	color = rgb(255, 255, 255)
     placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
     hide_input = false
     position = 0, -200
