Switched to alacritty, removed wallpapers from git.

--- a/packages/wayland/hyprland/hyprland.conf
+++ b/packages/wayland/hyprland/hyprland.conf
@@ -35,7 +35,7 @@ bind = $mod SHIFT, code:13, movetoworkspace, 4
 bind = $mod SHIFT, code:14, movetoworkspace, 5
 bind = $mod SHIFT, S, movetoworkspace, special
 
-bind = $mod, space, exec, [float; pin; stayfocused] ghostty -e ranch
+bind = $mod, space, exec, [float; pin; stayfocused] alacritty -e ranch
 
 $reset = echo "none" > /tmp/hypr-submap && hyprctl dispatch submap reset
 
@@ -68,7 +68,7 @@ bind = , L, exec, $reset && hyprctl dispatch exec hyprlock && sleep 1 && hyprctl
 
 # Open Stuff
 bind = , E, exec, $reset && zen-beta
-bind = , return, exec, $reset && ghostty
+bind = , return, exec, $reset && alacritty
 
 # Window Options
 bind = , W, exec, echo "window" > /tmp/hypr-submap
