--- a/packages/wayland/hyprland/hyprlock.conf
+++ b/packages/wayland/hyprland/hyprlock.conf
@@ -1,7 +1,7 @@
 # BACKGROUND
 background {
     monitor =
-    path = /home/brightonlcox/dotfiles/assets/wallpapers/outer_wilds/planets.jpeg
+    path = /home/brightonlcox/dotfiles/assets/wallpapers/online/fog-forest-autumn.jpg
     blur_passes = 2
     contrast = 1
     brightness = 0.5
