Adjusted to use bitwarden instead of 1pass. Updated nushell config to use bitwarden and added helpful autologin system

--- a/packages/wayland/ranch/config.yaml
+++ b/packages/wayland/ranch/config.yaml
@@ -168,10 +168,10 @@ entries:
     entries:
       - !entry
         icon: ""
-        name: "1Password"
+        name: "Bitwarden"
         icon_color: red
         events:
-          - !exec 1password
+          - !exec bitwarden
 
   - !folder
     name: "Settings"
