Removed Helix languages, and moved back to helix default

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 nixos-switch.log
 assets/wallpapers/*
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
